-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5
-
df4121886 (dev), 052c6915d (6.5), 692bf646a (6.6)
The QWebEngineCertificateError component is exported twice in the qmltypes file.
- resulted in
-
QTBUG-115855 qmltypes format needs to make "foreign" explicit
-
- Reported
-
| For Gerrit Dashboard: QTBUG-115365 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 495064,2 | Prevent QWebEngineCertificateError from being exported twice to QML | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 495932,2 | Prevent QWebEngineCertificateError from being exported twice to QML | 6.6 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 495933,2 | Prevent QWebEngineCertificateError from being exported twice to QML | 6.5 | qt/qtwebengine | Status: MERGED | +2 | 0 |