Prevent QWebEngineCertificateError from being exported twice to QML

We need to export the type as a value type, and also export its enums
in a namespace. This resulted in duplicated entries in the qmltypes
file, which confuses Qt Design Studio.

Fix it by introducing a derived class, and using it for exporting the
enums.

Fixes: QTBUG-115365
Pick-to: 6.6 6.5
Change-Id: I5900f4f76fb6357c9262496cc3cc01b276387e46
Reviewed-by: Michal Klocek <michal.klocek@qt.io>